--- a/DrawingStraws.cabal
+++ b/DrawingStraws.cabal
@@ -19,6 +19,6 @@ executable DrawingStraws
   main-is:             DrawingStraws.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.6 && <4.7, random, containers
+  build-depends:       base >=4.6 && <4.7, random, containers, time
   -- hs-source-dirs:
   default-language:    Haskell2010
