--- a/DrawingStraws.cabal
+++ b/DrawingStraws.cabal
@@ -19,7 +19,7 @@ executable DrawingStraws
   main-is:             DrawingStraws.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.8 && <4.9, random, time
+  build-depends:       base >=4.8 && <4.9, random, time, deepseq
   GHC-Options:         -Wall -Werror -O2
   -- hs-source-dirs:
   default-language:    Haskell2010
